Item class moved to domain project, all child projects should reference the domain project .

--- a/src/GildedRose/GildedRose.csproj
+++ b/src/GildedRose/GildedRose.csproj
@@ -7,4 +7,8 @@
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\GildedRose.Domain\GildedRose.Domain.csproj" />
+  </ItemGroup>
+
 </Project>
