new logic to replace legacy code added. Contract added to the domain layer. Service added to the application layer which will be accessed by the program file. Updaters added to update specific item types. Factory added to update item based on which item type is send to it.

--- a/src/GildedRose.Application/GildedRose.Application.csproj
+++ b/src/GildedRose.Application/GildedRose.Application.csproj
@@ -6,4 +6,8 @@
         <Nullable>enable</Nullable>
     </PropertyGroup>
 
+    <ItemGroup>
+      <ProjectReference Include="..\GildedRose.Domain\GildedRose.Domain.csproj" />
+    </ItemGroup>
+
 </Project>
