Application service added to unit tests, new code verified.

--- a/src/GildedRoseTests/GildedRoseTests.csproj
+++ b/src/GildedRoseTests/GildedRoseTests.csproj
@@ -20,6 +20,7 @@
     </ItemGroup>
 
     <ItemGroup>
+        <ProjectReference Include="..\GildedRose.Application\GildedRose.Application.csproj" />
         <ProjectReference Include="..\GildedRose\GildedRose.csproj" />
     </ItemGroup>
 
