new application service added to program file.

--- a/src/GildedRose/GildedRose.csproj
+++ b/src/GildedRose/GildedRose.csproj
@@ -8,6 +8,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\GildedRose.Application\GildedRose.Application.csproj" />
     <ProjectReference Include="..\GildedRose.Domain\GildedRose.Domain.csproj" />
   </ItemGroup>
 
